cmake_minimum_required(VERSION 3.20)
#project(Data_Structures C)

set(CMAKE_C_STANDARD 11)

add_executable(Data_Structures
        基本概念/c&c++/PrintN.c)

add_executable(MaxSubseqSum 基本概念/c&c++/MaxSubseqSum.cpp)

add_executable(MaximumSubsequenceSum "基本概念/c&c++/MaximumSubsequenceSum.cpp")

add_executable(BinarySearch 基本概念/c&c++/二分查找.cpp)
